src/zenoh_dart.h

/// Collects connected router ZIDs into a caller-provided buffer.
///
/// Each ZID is 16 bytes. The buffer must be at least max_count * 16 bytes.
///
/// @param session    Const pointer to a loaned session.
/// @param out_ids    Pointer to a buffer for ZID bytes (16 bytes per ZID).
/// @param max_count  Maximum number of ZIDs to collect.
/// @return Number of ZIDs written to the buffer.
FFI_PLUGIN_EXPORT int zd_info_routers_zid(const z_loaned_session_t* session,
                                          uint8_t* out_ids, int max_count);
/// Collects connected peer ZIDs into a caller-provided buffer.
///
/// Each ZID is 16 bytes. The buffer must be at least max_count * 16 bytes.
///
/// @param session    Const pointer to a loaned session.
/// @param out_ids    Pointer to a buffer for ZID bytes (16 bytes per ZID).
/// @param max_count  Maximum number of ZIDs to collect.
/// @return Number of ZIDs written to the buffer.
FFI_PLUGIN_EXPORT int zd_info_peers_zid(const z_loaned_session_t* session,
                                        uint8_t* out_ids, int max_count);
// ---------------------------------------------------------------------------
// Scout
// ---------------------------------------------------------------------------

/// Scouts for zenoh entities on the network.
///
/// Each discovered hello is posted to the Dart native port as a
/// Dart_CObject array of 3 elements:
///   [0] TypedData(Uint8, 16 bytes) -- ZID
///   [1] Int64 -- whatami value
///   [2] String -- locators joined with ';'
///
/// After z_scout returns, a null sentinel is posted to signal completion.
///
/// @param config      Pointer to an owned config (consumed). NULL = default config.
/// @param dart_port   The Dart native port to post Hello messages to.
/// @param timeout_ms  Scouting timeout in milliseconds.
/// @param what        Bitmask of entity types to scout for (e.g., 3 = router+peer).
/// @return 0 on success, negative on failure.
FFI_PLUGIN_EXPORT int zd_scout(z_owned_config_t* config, int64_t dart_port,
                               uint64_t timeout_ms, int what);
/// Converts a whatami integer to a human-readable view string.
///
/// @param whatami  The whatami value (1=router, 2=peer, 4=client).
/// @param out      Pointer to an uninitialized z_view_string_t.
/// @return 0 on success, negative on failure.
FFI_PLUGIN_EXPORT int zd_whatami_to_view_string(int whatami,
                                                z_view_string_t* out);
// ---------------------------------------------------------------------------
// Queryable
// ---------------------------------------------------------------------------

/// Returns the size of z_owned_queryable_t in bytes.
FFI_PLUGIN_EXPORT int32_t zd_queryable_sizeof(void);
/// Returns the size of z_owned_query_t in bytes.
FFI_PLUGIN_EXPORT int32_t zd_query_sizeof(void);
/// Declares a queryable on the given key expression.
///
/// Incoming queries are posted to the Dart isolate via the given native port.
///
/// @param queryable_out  Pointer to an uninitialized z_owned_queryable_t.
/// @param session        Const pointer to a loaned session (as uint8_t*).
/// @param key_expr       Null-terminated key expression string.
/// @param port           The Dart native port to post queries to.
/// @param complete       Whether this queryable is complete (1) or not (0).
/// @return 0 on success, negative on failure.
FFI_PLUGIN_EXPORT int8_t zd_declare_queryable(
    uint8_t* queryable_out,
    const uint8_t* session,
    const char* key_expr,
    int64_t port,
    int8_t complete);
/// Drops (undeclares and frees) a queryable.
///
/// @param queryable  Pointer to a z_owned_queryable_t to drop.
FFI_PLUGIN_EXPORT void zd_queryable_drop(uint8_t* queryable);
/// Performs a get query on the given selector.
///
/// Replies are posted to the Dart isolate via the given native port.
///
/// @param session        Const pointer to a loaned session (as uint8_t*).
/// @param selector       Null-terminated selector string.
/// @param port           The Dart native port to post replies to.
/// @param target         Query target (0=bestMatching, 1=all, 2=allComplete).
/// @param consolidation  Consolidation mode (-1=auto, 0=none, 1=monotonic, 2=latest).
/// @param payload        Pointer to z_owned_bytes_t (NULL = no payload).
///                       Consumed via z_bytes_move if non-NULL.
/// @param encoding       MIME type string (NULL = default).
/// @param timeout_ms     Timeout in milliseconds.
/// @param parameters     Additional query parameters (NULL = none).
/// @return 0 on success, negative on failure.
FFI_PLUGIN_EXPORT int8_t zd_get(
    const uint8_t* session,
    const char* selector,
    int64_t port,
    int8_t target,
    int8_t consolidation,
    uint8_t* payload,
    const char* encoding,
    uint64_t timeout_ms,
    const char* parameters);
/// Sends a reply to a query.
///
/// @param query        Const pointer to a loaned query (as uint8_t*).
/// @param key_expr     Null-terminated key expression string.
/// @param payload      Pointer to z_owned_bytes_t (consumed via z_bytes_move).
/// @param encoding     MIME type string (NULL = default).
/// @return 0 on success, negative on failure.
FFI_PLUGIN_EXPORT int8_t zd_query_reply(
    const uint8_t* query,
    const char* key_expr,
    uint8_t* payload,
    const char* encoding);
/// Drops (frees) an owned query.
///
/// @param query  Pointer to a z_owned_query_t to drop.
FFI_PLUGIN_EXPORT void zd_query_drop(uint8_t* query);
/// Returns the key expression of a query as a null-terminated string.
///
/// @param query  Const pointer to a loaned query (as uint8_t*).
/// @return Null-terminated key expression string.
FFI_PLUGIN_EXPORT const char* zd_query_keyexpr(const uint8_t* query);
/// Returns the parameters of a query as a null-terminated string.
///
/// @param query  Const pointer to a loaned query (as uint8_t*).
/// @return Null-terminated parameters string (empty string if no parameters).
FFI_PLUGIN_EXPORT const char* zd_query_parameters(const uint8_t* query);