package/lib/src/bindings.dart


  /// Collects connected router ZIDs into a caller-provided buffer.
  ///
  /// Each ZID is 16 bytes. The buffer must be at least max_count * 16 bytes.
  ///
  /// @param session    Const pointer to a loaned session.
  /// @param out_ids    Pointer to a buffer for ZID bytes (16 bytes per ZID).
  /// @param max_count  Maximum number of ZIDs to collect.
  /// @return Number of ZIDs written to the buffer.
  int zd_info_routers_zid(
    ffi.Pointer<ffi.Opaque> session,
    ffi.Pointer<ffi.Uint8> out_ids,
    int max_count,
  ) {
    return _zd_info_routers_zid(session, out_ids, max_count);
  }

  late final _zd_info_routers_zidPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Opaque>,
            ffi.Pointer<ffi.Uint8>,
            ffi.Int,
          )
        >
      >('zd_info_routers_zid');
  late final _zd_info_routers_zid = _zd_info_routers_zidPtr
      .asFunction<
        int Function(ffi.Pointer<ffi.Opaque>, ffi.Pointer<ffi.Uint8>, int)
      >();

  /// Collects connected peer ZIDs into a caller-provided buffer.
  ///
  /// Each ZID is 16 bytes. The buffer must be at least max_count * 16 bytes.
  ///
  /// @param session    Const pointer to a loaned session.
  /// @param out_ids    Pointer to a buffer for ZID bytes (16 bytes per ZID).
  /// @param max_count  Maximum number of ZIDs to collect.
  /// @return Number of ZIDs written to the buffer.
  int zd_info_peers_zid(
    ffi.Pointer<ffi.Opaque> session,
    ffi.Pointer<ffi.Uint8> out_ids,
    int max_count,
  ) {
    return _zd_info_peers_zid(session, out_ids, max_count);
  }

  late final _zd_info_peers_zidPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Opaque>,
            ffi.Pointer<ffi.Uint8>,
            ffi.Int,
          )
        >
      >('zd_info_peers_zid');
  late final _zd_info_peers_zid = _zd_info_peers_zidPtr
      .asFunction<
        int Function(ffi.Pointer<ffi.Opaque>, ffi.Pointer<ffi.Uint8>, int)
      >();

  /// Scouts for zenoh entities on the network.
  ///
  /// Each discovered hello is posted to the Dart native port as a
  /// Dart_CObject array of 3 elements:
  /// [0] TypedData(Uint8, 16 bytes) -- ZID
  /// [1] Int64 -- whatami value
  /// [2] String -- locators joined with ';'
  ///
  /// After z_scout returns, a null sentinel is posted to signal completion.
  ///
  /// @param config      Pointer to an owned config (consumed). NULL = default config.
  /// @param dart_port   The Dart native port to post Hello messages to.
  /// @param timeout_ms  Scouting timeout in milliseconds.
  /// @param what        Bitmask of entity types to scout for (e.g., 3 = router+peer).
  /// @return 0 on success, negative on failure.
  int zd_scout(
    ffi.Pointer<ffi.Opaque> config,
    int dart_port,
    int timeout_ms,
    int what,
  ) {
    return _zd_scout(config, dart_port, timeout_ms, what);
  }

  late final _zd_scoutPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Opaque>,
            ffi.Int64,
            ffi.Uint64,
            ffi.Int,
          )
        >
      >('zd_scout');
  late final _zd_scout = _zd_scoutPtr
      .asFunction<int Function(ffi.Pointer<ffi.Opaque>, int, int, int)>();

  /// Converts a whatami integer to a human-readable view string.
  ///
  /// @param whatami  The whatami value (1=router, 2=peer, 4=client).
  /// @param out      Pointer to an uninitialized z_view_string_t.
  /// @return 0 on success, negative on failure.
  int zd_whatami_to_view_string(int whatami, ffi.Pointer<ffi.Opaque> out) {
    return _zd_whatami_to_view_string(whatami, out);
  }

  late final _zd_whatami_to_view_stringPtr =
      _lookup<
        ffi.NativeFunction<ffi.Int Function(ffi.Int, ffi.Pointer<ffi.Opaque>)>
      >('zd_whatami_to_view_string');
  late final _zd_whatami_to_view_string = _zd_whatami_to_view_stringPtr
      .asFunction<int Function(int, ffi.Pointer<ffi.Opaque>)>();

  /// Returns the size of z_owned_queryable_t in bytes.
  int zd_queryable_sizeof() {
    return _zd_queryable_sizeof();
  }

  late final _zd_queryable_sizeofPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function()>>('zd_queryable_sizeof');
  late final _zd_queryable_sizeof = _zd_queryable_sizeofPtr
      .asFunction<int Function()>();

  /// Returns the size of z_owned_query_t in bytes.
  int zd_query_sizeof() {
    return _zd_query_sizeof();
  }

  late final _zd_query_sizeofPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function()>>('zd_query_sizeof');
  late final _zd_query_sizeof = _zd_query_sizeofPtr
      .asFunction<int Function()>();

  /// Declares a queryable on the given key expression.
  ///
  /// Incoming queries are posted to the Dart isolate via the given native port.
  ///
  /// @param queryable_out  Pointer to an uninitialized z_owned_queryable_t.
  /// @param session        Const pointer to a loaned session (as uint8_t*).
  /// @param key_expr       Null-terminated key expression string.
  /// @param port           The Dart native port to post queries to.
  /// @param complete       Whether this queryable is complete (1) or not (0).
  /// @return 0 on success, negative on failure.
  int zd_declare_queryable(
    ffi.Pointer<ffi.Uint8> queryable_out,
    ffi.Pointer<ffi.Uint8> session,
    ffi.Pointer<ffi.Char> key_expr,
    int port,
    int complete,
  ) {
    return _zd_declare_queryable(
      queryable_out,
      session,
      key_expr,
      port,
      complete,
    );
  }

  late final _zd_declare_queryablePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int8 Function(
            ffi.Pointer<ffi.Uint8>,
            ffi.Pointer<ffi.Uint8>,
            ffi.Pointer<ffi.Char>,
            ffi.Int64,
            ffi.Int8,
          )
        >
      >('zd_declare_queryable');
  late final _zd_declare_queryable = _zd_declare_queryablePtr
      .asFunction<
        int Function(
          ffi.Pointer<ffi.Uint8>,
          ffi.Pointer<ffi.Uint8>,
          ffi.Pointer<ffi.Char>,
          int,
          int,
        )
      >();

  /// Drops (undeclares and frees) a queryable.
  ///
  /// @param queryable  Pointer to a z_owned_queryable_t to drop.
  void zd_queryable_drop(ffi.Pointer<ffi.Uint8> queryable) {
    return _zd_queryable_drop(queryable);
  }

  late final _zd_queryable_dropPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Uint8>)>>(
        'zd_queryable_drop',
      );
  late final _zd_queryable_drop = _zd_queryable_dropPtr
      .asFunction<void Function(ffi.Pointer<ffi.Uint8>)>();

  /// Performs a get query on the given selector.
  ///
  /// Replies are posted to the Dart isolate via the given native port.
  ///
  /// @param session        Const pointer to a loaned session (as uint8_t*).
  /// @param selector       Null-terminated selector string.
  /// @param port           The Dart native port to post replies to.
  /// @param target         Query target (0=bestMatching, 1=all, 2=allComplete).
  /// @param consolidation  Consolidation mode (-1=auto, 0=none, 1=monotonic, 2=latest).
  /// @param payload        Pointer to z_owned_bytes_t (NULL = no payload).
  /// Consumed via z_bytes_move if non-NULL.
  /// @param encoding       MIME type string (NULL = default).
  /// @param timeout_ms     Timeout in milliseconds.
  /// @param parameters     Additional query parameters (NULL = none).
  /// @return 0 on success, negative on failure.
  int zd_get(
    ffi.Pointer<ffi.Uint8> session,
    ffi.Pointer<ffi.Char> selector,
    int port,
    int target,
    int consolidation,
    ffi.Pointer<ffi.Uint8> payload,
    ffi.Pointer<ffi.Char> encoding,
    int timeout_ms,
    ffi.Pointer<ffi.Char> parameters,
  ) {
    return _zd_get(
      session,
      selector,
      port,
      target,
      consolidation,
      payload,
      encoding,
      timeout_ms,
      parameters,
    );
  }

  late final _zd_getPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int8 Function(
            ffi.Pointer<ffi.Uint8>,
            ffi.Pointer<ffi.Char>,
            ffi.Int64,
            ffi.Int8,
            ffi.Int8,
            ffi.Pointer<ffi.Uint8>,
            ffi.Pointer<ffi.Char>,
            ffi.Uint64,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('zd_get');
  late final _zd_get = _zd_getPtr
      .asFunction<
        int Function(
          ffi.Pointer<ffi.Uint8>,
          ffi.Pointer<ffi.Char>,
          int,
          int,
          int,
          ffi.Pointer<ffi.Uint8>,
          ffi.Pointer<ffi.Char>,
          int,
          ffi.Pointer<ffi.Char>,
        )
      >();

  /// Sends a reply to a query.
  ///
  /// @param query        Const pointer to a loaned query (as uint8_t*).
  /// @param key_expr     Null-terminated key expression string.
  /// @param payload      Pointer to z_owned_bytes_t (consumed via z_bytes_move).
  /// @param encoding     MIME type string (NULL = default).
  /// @return 0 on success, negative on failure.
  int zd_query_reply(
    ffi.Pointer<ffi.Uint8> query,
    ffi.Pointer<ffi.Char> key_expr,
    ffi.Pointer<ffi.Uint8> payload,
    ffi.Pointer<ffi.Char> encoding,
  ) {
    return _zd_query_reply(query, key_expr, payload, encoding);
  }

  late final _zd_query_replyPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int8 Function(
            ffi.Pointer<ffi.Uint8>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Uint8>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('zd_query_reply');
  late final _zd_query_reply = _zd_query_replyPtr
      .asFunction<
        int Function(
          ffi.Pointer<ffi.Uint8>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Uint8>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  /// Drops (frees) an owned query.
  ///
  /// @param query  Pointer to a z_owned_query_t to drop.
  void zd_query_drop(ffi.Pointer<ffi.Uint8> query) {
    return _zd_query_drop(query);
  }

  late final _zd_query_dropPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Uint8>)>>(
        'zd_query_drop',
      );
  late final _zd_query_drop = _zd_query_dropPtr
      .asFunction<void Function(ffi.Pointer<ffi.Uint8>)>();

  /// Returns the key expression of a query as a null-terminated string.
  ///
  /// @param query  Const pointer to a loaned query (as uint8_t*).
  /// @return Null-terminated key expression string.
  ffi.Pointer<ffi.Char> zd_query_keyexpr(ffi.Pointer<ffi.Uint8> query) {
    return _zd_query_keyexpr(query);
  }

  late final _zd_query_keyexprPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Uint8>)
        >
      >('zd_query_keyexpr');
  late final _zd_query_keyexpr = _zd_query_keyexprPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Uint8>)>();

  /// Returns the parameters of a query as a null-terminated string.
  ///
  /// @param query  Const pointer to a loaned query (as uint8_t*).
  /// @return Null-terminated parameters string (empty string if no parameters).
  ffi.Pointer<ffi.Char> zd_query_parameters(ffi.Pointer<ffi.Uint8> query) {
    return _zd_query_parameters(query);
  }

  late final _zd_query_parametersPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Uint8>)
        >
      >('zd_query_parameters');
  late final _zd_query_parameters = _zd_query_parametersPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Uint8>)>();
